--- a/styles/style.css
+++ b/styles/style.css
@@ -77,3 +77,61 @@ hr {
   color: #094475;
   text-decoration: none;
 }
+
+/* courses style */
+.courses {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 30px;
+  /* border: 1px solid blue; */
+}
+.course-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.course > .course-banner img {
+  width: 224px;
+  height: 104px;
+}
+
+.fa-star {
+  font-size: 12px;
+}
+.fa-star.filled {
+  color: goldenrod;
+}
+
+.fa-star.empty {
+  color: gray;
+}
+
+/* Media Query */
+
+@media only screen and (max-width: 668px) {
+  .container {
+    width: 100%;
+  }
+  .players,
+  .top-blogs,
+  .courses {
+    grid-template-columns: repeat(1, 1fr);
+    grid-row-gap: 10px;
+  }
+  .player,
+  .blog {
+    flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 668px) and (max-width: 992px) {
+  .container {
+    width: 100%;
+  }
+  .players,
+  .top-blogs,
+  .courses {
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 15px;
+  }
+}
