--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 /* root style */
 body {
+  margin: 0;
   font-family: "Poppins", sans-serif;
   background-color: #f3f1ff;
 }
@@ -8,6 +9,9 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+header {
+  background-color: #1010a3dc;
 }
 .container {
   background-color: #ffff;
@@ -20,6 +24,49 @@ hr {
   border: 1px solid gray;
   margin-bottom: 30px;
 }
+.fas {
+  font-size: 24px;
+  color: whitesmoke;
+  margin-left: 20px;
+}
+
+/* navbar */
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 30px;
+  max-width: 870px;
+  margin: 0 auto;
+}
+
+.nav-info {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.nav-logo {
+  width: 44px;
+  height: 44px;
+}
+
+.nav-items ul {
+  display: flex;
+  list-style: none;
+}
+.nav-items a {
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  font-weight: 400px;
+  margin-right: 20px;
+}
+
+.nav-icon {
+  display: flex;
+  align-items: center;
+}
+
 /* top players style*/
 
 .top-players {
@@ -57,6 +104,11 @@ hr {
 }
 .blog {
   display: flex;
+  align-items: center;
+  border-radius: 5px;
+  margin: 0 auto;
+  padding: 5px;
+  box-shadow: 5px 5px 5px 5px #8888880e;
 }
 .blog img {
   width: 117 px;
@@ -84,6 +136,14 @@ hr {
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 30px;
   /* border: 1px solid blue; */
+}
+.course {
+  border-radius: 5px;
+  padding: 5px;
+  box-shadow: 7px 5px 5px 7px #8888880e;
+}
+.course-banner {
+  text-align: center;
 }
 .course-info {
   display: flex;
@@ -118,6 +178,9 @@ hr {
     grid-template-columns: repeat(1, 1fr);
     grid-row-gap: 10px;
   }
+  .nav-bar,
+  .nav-info,
+  .nav-items > ul,
   .player,
   .blog {
     flex-direction: column;
