--- a/styles/style.css
+++ b/styles/style.css
@@ -83,7 +83,7 @@ hr {
   margin-bottom: 30px;
 }
 .section-title {
-  color: blue;
+  color: red;
   font-size: 24px;
   margin-top: 3px;
 }
@@ -103,6 +103,8 @@ hr {
 .player-name {
   margin-left: 16px;
   font-size: 18px;
+  color: g;
+  border: 1;
 }
 
 /* -------- top blog style -------*/
