--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@ main {
 }
 header {
   background-color: #1010a3dc;
+  max-width: 100%;
+  margin: 0 auto;
 }
 .container {
   background-color: #ffff;
@@ -83,7 +85,6 @@ hr {
   margin-bottom: 30px;
 }
 .section-title {
-  color: b;
   font-size: 24px;
   margin-top: 3px;
 }
@@ -103,8 +104,6 @@ hr {
 .player-name {
   margin-left: 16px;
   font-size: 18px;
-  color: g;
-  border: 1;
 }
 
 /* -------- top blog style -------*/
@@ -195,6 +194,7 @@ hr {
   .player,
   .blog {
     flex-direction: column;
+    margin: 0 auto;
   }
 }
 
